--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",  
+  "types": "dist/types/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
     "googleapis": "^134.0.0"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "typescript": "^5.4.2"
   }
 }
