--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gmail-node-mailer",
-  "version": "1.0.47",
+  "version": "1.0.48",
   "description": "",
   "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
