--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gmail-node-mailer",
-  "version": "1.0.60",
+  "version": "1.0.61",
   "description": "",
   "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/types/types.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
