--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "googleapis": "^134.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   }
 }
