--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "gmail-node-mailer",
   "version": "1.7.302",
-  "description": "",
+  "description": "A Node.js library for sending emails using the Gmail API.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "gmail",
+    "mailer",
+    "email"
+  ],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "googleapis": "^134.0.0"
@@ -20,5 +24,13 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/gmail-node-mailer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/gmail-node-mailer/issues"
+  },
+  "homepage": "https://github.com/your-username/gmail-node-mailer#readme"
 }
