--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gmail-node-mailer",
-  "version": "1.7.303",
+  "version": "1.7.304",
   "description": "A Node.js library for sending emails using the Gmail API.",
   "main": "dist/index.js",
   "scripts": {
@@ -8,10 +8,20 @@
     "test": "jest"
   },
   "keywords": [
+    "ejs",
+    "npm",
+    "package",
+    "typescript",
+    "email",
     "gmail",
-    "mailer",
-    "email"
-  ],
+    "npm-package",
+    "email-validation",
+    "nodemailer",
+    "gmail-api",
+    "nodejs-library",
+    "email-sending",
+    "service-account"
+],
   "author": "Wal33d",
   "license": "ISC",
   "dependencies": {
@@ -32,5 +42,5 @@
   "bugs": {
     "url": "https://github.com/our-node-packages/gmail-node-mailer/issues"
   },
-  "homepage": "https://www.npmjs.com/package/gmail-node-mailer"
+  "homepage": "https://github.com/our-node-packages/gmail-node-mailer"
 }
