--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gmail-node-mailer",
-  "version": "1.7.304",
-  "description": "A Node.js library for sending emails using the Gmail API.",
+  "version": "1.7.305",
+  "description": "gmail-node-mailer is a Node.js library for easy email sending via the Gmail API, featuring quick setup, HTML/plain text support, and dynamic configuration for streamlined email integration.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
