--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gmail-node-mailer",
-  "version": "1.7.313",
+  "version": "1.7.314",
   "description": "gmail-node-mailer is a Node.js library for easy email sending via the Gmail API, featuring quick setup, HTML/plain text support, and dynamic configuration for streamlined email integration.",
   "main": "dist/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "nodejs-library",
     "email-sending",
     "service-account"
-],
+  ],
   "author": "Wal33d",
   "license": "ISC",
   "dependencies": {
@@ -42,5 +42,9 @@
   "bugs": {
     "url": "https://github.com/our-node-packages/gmail-node-mailer/issues"
   },
-  "homepage": "https://github.com/our-node-packages/gmail-node-mailer"
+  "homepage": "https://github.com/our-node-packages/gmail-node-mailer",
+  
+  "publishConfig": {
+    "@our-node-packages:registry": "https://npm.pkg.github.com/our-node-packages"
+  }
 }
