--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gmail-node-mailer",
-  "version": "1.8.8",
+  "version": "1.8.9",
   "description": "gmail-node-mailer is a Node.js library for easy email sending via the Gmail API, featuring quick setup, HTML/plain text support, dynamic configuration for streamlined email integration, and now with support for attachments.",
   "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest",
